CSS tweaks and build

--- a/src/contact/Contact.scss
+++ b/src/contact/Contact.scss
@@ -21,11 +21,11 @@
 
         a {
             text-decoration: none;
-            color: #BDF271;
+            color: #18C29C;
             transition: all 0.5s ease;
 
             &:hover {
-                color: #7eb233;
+                color: #0B877D;
             }
         }
     }
