--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
   text-rendering: optimizeLegibility;
   font-feature-settings: "pnum";
   font-variant-numeric: proportional-nums;
-  background-color: #fff; }
+  background-color: #eee; }
   html ::selection {
     background: #cecece; }
   html ::-moz-selection {
@@ -19,12 +19,11 @@ html {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 760px;
-  transform: skewY(-12deg);
+  height: 660px;
+  transform: skewY(-8deg);
   transform-origin: 0;
-  background: -webkit-linear-gradient(to left, #a1cdfc, #6fe2de);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #a1cdfc, #6fe2de);
+  background: -webkit-linear-gradient(to left, #126872, #88F9D4);
+  background: linear-gradient(to left, #74a0e0, #7698c9);
   z-index: -999; }
   @media (max-width: 760px) {
     .diagonal-background {
@@ -36,7 +35,7 @@ html {
   text-align: center;
   font-size: 30px; }
   .section-header span {
-    color: #BDF271; }
+    color: #88F9D4; }
 
 .header__intro {
   font-weight: lighter;
@@ -47,6 +46,8 @@ html {
   text-align: center;
   color: #fff;
   text-shadow: 1px 1px 7px rgba(40, 40, 40, 0.4); }
+  .header__intro p span {
+    color: #88F9D4; }
   .header__intro p a {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #4c647c;
