--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -8,7 +8,9 @@
   .navbar .logo {
     font-family: monospace, 'Monaco', Consolas, "Lucida Console";
     height: 55px;
-    width: 55px; }
+    width: 55px;
+    user-select: none;
+    cursor: default; }
     .navbar .logo .logo-header {
       height: 10px;
       border-radius: 5px 5px 0 0;
@@ -68,11 +70,11 @@
       bottom: -13px;
       width: 0;
       height: 5px;
-      background-color: #BDF271;
+      background-color: #88F9D4;
       transition: width 0.4s;
       content: ""; }
     .navbar .links .link:hover {
-      color: #BDF271;
+      color: #88F9D4;
       cursor: pointer; }
       .navbar .links .link:hover:after {
         width: 100%; }
