--- a/src/tag/Tag.css
+++ b/src/tag/Tag.css
@@ -1,6 +1,6 @@
 .tag {
   border-radius: 4px;
-  border: solid 2px #BDF271;
+  border: solid 2px #88F9D4;
   padding: 8px;
   margin-right: 10px;
   margin-bottom: 10px; }
