--- a/src/tile/Tile.css
+++ b/src/tile/Tile.css
@@ -9,9 +9,11 @@
   margin: 0 auto 50px auto;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.05), 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.2), 0 15px 35px rgba(50, 50, 93, 0.3), 0 5px 15px rgba(0, 0, 0, 0.3);
   transition: all .5s ease;
   overflow: hidden; }
+  .tile:hover {
+    box-shadow: 0 50px 100px rgba(50, 50, 93, 0.3), 0 15px 35px rgba(50, 50, 93, 0.5), 0 5px 15px rgba(0, 0, 0, 0.5); }
   .tile .tile-image {
     position: absolute;
     top: 0;
