--- a/src/tile/Tile.scss
+++ b/src/tile/Tile.scss
@@ -9,9 +9,13 @@
     margin: 0 auto 50px auto;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 50px 100px rgba(50,50,93,.05), 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.1);
+    box-shadow: 0 50px 100px rgba(50,50,93,.2), 0 15px 35px rgba(50,50,93,.3), 0 5px 15px rgba(0,0,0,.3);
     transition: all .5s ease;
     overflow: hidden;
+
+    &:hover {
+      box-shadow: 0 50px 100px rgba(50,50,93,.3), 0 15px 35px rgba(50,50,93,.5), 0 5px 15px rgba(0,0,0,.5);
+    }
 
     .tile-image {
         position: absolute;
