--- a/src/contactLink/ContactLink.css
+++ b/src/contactLink/ContactLink.css
@@ -1,5 +1,5 @@
 .contact-link {
-  margin: auto 20px auto 20px;
+  margin: auto 20px 30px 20px;
   transition: all 0.3s ease; }
   .contact-link:hover {
     transform: translateY(-4px); }
