--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -16,7 +16,7 @@
         font-size: 30px; } }
     .contact h3 a {
       text-decoration: none;
-      color: #18C29C;
+      color: #9854f7;
       transition: all 0.5s ease; }
       .contact h3 a:hover {
-        color: #0B877D; }
+        color: #a875ef; }
