--- a/src/contact/Contact.scss
+++ b/src/contact/Contact.scss
@@ -21,11 +21,11 @@
 
         a {
             text-decoration: none;
-            color: #18C29C;
+            color: #9854f7;
             transition: all 0.5s ease;
 
             &:hover {
-                color: #0B877D;
+                color: #a875ef;
             }
         }
     }
