--- a/src/App.css
+++ b/src/App.css
@@ -15,27 +15,21 @@ html {
   html ::-moz-selection {
     background: #cecece; }
 
-.diagonal-background {
+canvas {
   position: absolute;
   top: 0;
+  left: 0;
+  z-index: -1;
   width: 100%;
-  height: 660px;
-  transform: skewY(-8deg);
-  transform-origin: 0;
-  background: -webkit-linear-gradient(to left, #126872, #88F9D4);
-  background: linear-gradient(to left, #74a0e0, #7698c9);
-  z-index: -999; }
-  @media (max-width: 760px) {
-    .diagonal-background {
-      height: 500px;
-      transition: all 0.3s ease; } }
+  height: 100%;
+  pointer-events: none; }
 
 .section-header {
   margin: 80px auto 80px auto;
   text-align: center;
   font-size: 30px; }
   .section-header span {
-    color: #88F9D4; }
+    color: #9854f7; }
 
 .header__intro {
   font-weight: lighter;
@@ -44,10 +38,9 @@ html {
   max-width: 950px;
   margin: 70px auto 70px auto;
   text-align: center;
-  color: #fff;
-  text-shadow: 1px 1px 7px rgba(40, 40, 40, 0.4); }
+  color: #3d3d3d; }
   .header__intro p span {
-    color: #88F9D4; }
+    color: #9854f7; }
   .header__intro p a {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #4c647c;
