--- a/src/App.scss
+++ b/src/App.scss
@@ -20,21 +20,14 @@ html {
   }
 }
 
-.diagonal-background {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 660px;
-  transform: skewY(-8deg);
-  transform-origin: 0;
-  background: -webkit-linear-gradient(to left, #126872, #88F9D4);
-  background: linear-gradient(to left, #74a0e0, #7698c9);
-  z-index: -999;
-
-  @media (max-width: 760px) {
-    height: 500px;
-    transition: all 0.3s ease;
-  }
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 .section-header {
@@ -43,7 +36,7 @@ html {
   font-size: 30px;
 
   span {
-    color: #88F9D4;
+    color: #9854f7;
   }
 }
 
@@ -54,12 +47,11 @@ html {
   max-width: 950px;
   margin: 70px auto 70px auto;
   text-align: center;
-  color: #fff;
-  text-shadow: 1px 1px 7px rgba(40, 40, 40, 0.4);
+  color: #3d3d3d;
 
   p {
     span {
-      color: #88F9D4;
+      color: #9854f7;
     }
     a {
       -webkit-text-stroke-width: 1px;
