--- a/src/button/Button.scss
+++ b/src/button/Button.scss
@@ -9,13 +9,13 @@
     border-radius: 4px;
     transition: all 0.3s ease;
     color: #fff;
-    background: #01A2A6;
+    background: #9854f7;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
 
     &:hover {
-        background: #29D9C2;
+        background: #a875ef;
         transform: translateY(-2px);
         box-shadow: 0 7px 14px rgba(50,50,50,.1), 0 3px 6px rgba(0,0,0,.1);
     }
