--- a/src/command/Command.css
+++ b/src/command/Command.css
@@ -14,13 +14,13 @@
     .command .command-argument:before {
       content: '$ '; }
   .command .command-result {
-    color: #FFFFA6; }
+    color: #a0e258; }
     .command .command-result .command-result__link {
-      color: #3df4dc;
+      color: #9854f7;
       text-decoration: none; }
       .command .command-result .command-result__link:hover {
         transition: background-color 0.5s ease;
-        background-color: rgba(53, 196, 255, 0.3); }
+        background-color: rgba(152, 84, 247, 0.3); }
   .command .terminal-indicator {
     background: rgba(247, 247, 247, 0.5);
     animation: caret 1s steps(1) infinite; }
