--- a/src/command/Command.scss
+++ b/src/command/Command.scss
@@ -21,15 +21,15 @@
     }
 
     .command-result {
-        color: #FFFFA6;
+        color: #a0e258;
 
         .command-result__link {
-            color: #3df4dc;
+            color: #9854f7;
             text-decoration: none;
 
             &:hover {
                 transition: background-color 0.5s ease;
-                background-color: rgba(53, 196, 255, 0.3);
+                background-color: rgba(152, 84, 247, 0.3);
             }
         }
     }
