--- a/src/navbar/Navbar.scss
+++ b/src/navbar/Navbar.scss
@@ -46,7 +46,7 @@
 
         .logo-window {
             height: 40px;
-            background-color: #4c647c;
+            background-color: #2c2d3d;
             border-radius: 0 0 5px 5px;
             display: flex;
             justify-content: flex-start;
@@ -65,7 +65,7 @@
 
             .logo-window__initials {
                 font-size: 26px;
-                color: #FFFFA6;
+                color: #a0e258;
             }
         }
     }
@@ -75,14 +75,12 @@
         .link {
             margin-right: 50px;
             text-decoration: none;
-            color: #fff;
+            color: #3d3d3d;
             font-size: 22px;
             letter-spacing: 1px;
             font-weight: bold;
             position: relative;
             transition: all 0.4s ease;
-            text-shadow: 1px 1px 7px rgba(40, 40, 40, 0.4);
-
             @media screen and (max-width: 500px) {
                 font-size: 18px;
                 margin-right: 30px;
@@ -95,14 +93,15 @@
                 bottom: -13px;
                 width: 0;
                 height: 5px;
-                background-color: #88F9D4;
+                background-color: #9854f7;
                 transition: width 0.4s;
                 content: "";
             }
 
             &:hover {
-                color: #88F9D4;
+                color: #9854f7;
                 cursor: pointer;
+                text-shadow: 1px 1px 7px rgba(40, 40, 40, 0);
 
                 &:after {
                     width: 100%;
