--- a/src/tag/Tag.scss
+++ b/src/tag/Tag.scss
@@ -1,6 +1,6 @@
 .tag {
     border-radius: 4px;
-    border: solid 2px #88F9D4;
+    border: solid 2px #9854f7;
     padding: 8px;
     margin-right: 10px;
     margin-bottom: 10px;
