--- a/src/terminal/Terminal.css
+++ b/src/terminal/Terminal.css
@@ -25,7 +25,7 @@
       background-color: #33c948;
       border: solid 1px #2dbb41; }
   .terminal .terminal-window {
-    background-color: #4c647c;
+    background-color: #2c2d3d;
     border-radius: 0 0 4px 4px;
     font-family: monospace, 'Monaco', Consolas, "Lucida Console";
     font-size: 18px; }
