--- a/src/terminal/Terminal.scss
+++ b/src/terminal/Terminal.scss
@@ -36,7 +36,7 @@
     }
 
     .terminal-window {
-        background-color: #4c647c;
+        background-color: #2c2d3d;
         border-radius: 0 0 4px 4px;
         font-family: monospace, 'Monaco', Consolas, "Lucida Console";
         font-size: 18px;
